--- a/refs.bib
+++ b/refs.bib
@@ -221,3 +221,15 @@ number = "11",
 	pages={2121--2159},
 	year={2011}
 }
+
+@ARTICLE{Theano2016short,
+	author = {{Theano Development Team}},
+	title = "{Theano: A {Python} framework for fast computation of mathematical expressions}",
+	journal = {arXiv e-prints},
+	volume = {abs/1605.02688},
+	primaryClass = "cs.SC",
+	keywords = {Computer Science - Symbolic Computation, Computer Science - Learning, Computer Science - Mathematical Software},
+	year = 2016,
+	month = may,
+	url = {http://arxiv.org/abs/1605.02688},
+}
