--- a/refs.bib
+++ b/refs.bib
@@ -233,3 +233,14 @@ number = "11",
 	month = may,
 	url = {http://arxiv.org/abs/1605.02688},
 }
+
+@article{hochreiter1997long,
+	title={Long short-term memory},
+	author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+	journal={Neural computation},
+	volume={9},
+	number={8},
+	pages={1735--1780},
+	year={1997},
+	publisher={MIT Press}
+}
